--- a/src/app/differ/differ.html
+++ b/src/app/differ/differ.html
@@ -26,7 +26,7 @@
   <div class="tools debug">
     <div class="left">
         <h2>
-            <span class="material-symbols-outlined light">code_off</span>
+            <span class="material-symbols-outlined light">text_compare</span>
             Sample A
         </h2>
         <span class="length light">
@@ -39,7 +39,7 @@
     </div>
     <div class="right">
         <h2>
-            <span class="material-symbols-outlined light">code_off</span>
+            <span class="material-symbols-outlined light">text_compare</span>
             Sample B
         </h2>
         <span class="length light">
