--- a/src/app/differ/differ.scss
+++ b/src/app/differ/differ.scss
@@ -1,4 +1,51 @@
 
+button {
+    border: unset;
+    background-color: unset;
+    display: flex;
+    align-items: flex-end;
+    gap: 4px;
+    padding: 4px 8px;
+    cursor: pointer;
+    color: var(--base);
+
+    &:hover {
+        color: var(--base-dark);
+    }
+}
+
+.clear-button-menu-trigger {
+    display: flex;
+    align-items: center;
+    gap: 4px;
+    padding: 4px 8px;
+    cursor: default;
+    color: var(--base);
+}
+
+.clear-button-wrapper {
+    display: flex;
+    align-items: center;
+    width: 80px;
+    min-width: 80px;
+    max-width: 80px;
+    overflow-x: hidden;
+    transition: all .2s ease;
+    
+    &.expanded {
+        min-width: 240px;
+        max-width: 240px;
+        width: auto;
+    }
+}
+
+.topbar {
+    width: 100%;
+    display: flex;
+    border-bottom: 1px solid var(--base-light);
+
+}
+
 .tools {
     width: 100%;
     display: flex;
@@ -18,20 +65,6 @@
             display: flex;
             align-items: center;
             gap: 4px;
-        }
-
-        button {
-            border: unset;
-            background-color: unset;
-            display: flex;
-            align-items: flex-end;
-            gap: 4px;
-            cursor: pointer;
-            color: var(--base);
-
-            &:hover {
-                color: var(--base-dark);
-            }
         }
     }
 }
